--- a/datastore-callbacks/build.gradle
+++ b/datastore-callbacks/build.gradle
@@ -16,3 +16,14 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository url: "file://${buildDir}/repository"
+            pom.version = '0.1.0'
+            pom.groupId = 'com.kaiinui.appengine-commons'
+            pom.artifactId = 'datastore-callbacks'
+        }
+    }
+}
